adding naming guru update api call

--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -681,7 +681,47 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "class CommaSeperatedListOutputParser(BaseOutputParser):\n",
+    "    \"\"\"Parse the output of an LLM call to a comma-separated list.\"\"\"\n",
+    "\n",
+    "    def parse(self, text: str) -> list[str]:\n",
+    "        \"\"\"Parse the output of an LLM call.\"\"\"\n",
+    "        return text.strip().split(\",\")\n",
+    "    \n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "\n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.0-flash-001\",\n",
+    "    temperature=0,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=2\n",
+    ")\n",
+    "\n",
+    "# Modify the prompt to explicitly require comma-separated output formatting\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"You are a master of naming. Please create 3 Japanese-style names that incorporate elements or themes related to {country}. \"\n",
+    "    \"Return ONLY the names in a comma-separated format without any additional explanation. \"\n",
+    "    \"Example: For Japanese names, common boy names include {boy_name} and common girl names include {girl_name}.\"\n",
+    ")\n",
+    "\n",
+    "message = prompt.format(country=\"Japan\", boy_name=\"Taro\", girl_name=\"Hanako\")\n",
+    "print(message)\n",
+    "\n",
+    "strs = llm.predict(message)\n",
+    "print(\"Raw response:\", strs)\n",
+    "\n",
+    "names = CommaSeperatedListOutputParser().parse(strs)\n",
+    "print(\"Parsed names:\", names)"
+   ]
   }
  ],
  "metadata": {
