--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -573,16 +573,14 @@
    "id": "c4551cfb",
    "metadata": {},
    "source": [
-    "#  Idea01: PDF processing and a large language model such as Gemini to create a chatbox\n",
+    "#  Idea01: PDF processing and Gemini to create a chatbox\n",
     "Using LangChain in conjunction with PDF processing and a large language model such as Gemini to create a chatbox that can talk to PDF documents is a great direction to take. You've got a good starting point, so let me explain further how to accomplish this.\n",
     "To create a chatbox that can talk to PDFs, you need to add the following key components:\n",
     "\n",
     "Vector storage: Convert PDF content into vectors and store them so that semantic search is possible\n",
     "Retrieval system: retrieve relevant content based on user questions\n",
     "Conversation Memory: Keeps conversations in context\n",
-    "Conversation Chaining: Connects all components into a complete conversation system.\n",
-    "\n",
-    "Translated with www.DeepL.com/Translator (free version)"
+    "Conversation Chaining: Connects all components into a complete conversation system.\n"
    ]
   },
   {
