not using PDF for now

--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "id": "654baa96",
    "metadata": {},
    "outputs": [
@@ -345,62 +345,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "36cce7e0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "File path /Users/itsyuimoriispace/Desktop/Digital Transformation.pdf is not a valid file or url",
+     "ename": "ImportError",
+     "evalue": "`pypdf` package not found, please install it with `pip install pypdf`",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[54], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/itsyuimoriispace/Desktop/Digital Transformation.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Load and parse the PDF\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m loader \u001b[38;5;241m=\u001b[39m \u001b[43mPyPDFLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m pages \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39mload_and_split()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Print the number of pages found\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/pdf.py:281\u001b[0m, in \u001b[0;36mPyPDFLoader.__init__\u001b[0;34m(self, file_path, password, headers, extract_images, mode, images_parser, images_inner_format, pages_delimiter, extraction_mode, extraction_kwargs)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m    239\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    240\u001b[0m     file_path: Union[\u001b[38;5;28mstr\u001b[39m, PurePath],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    250\u001b[0m     extraction_kwargs: Optional[\u001b[38;5;28mdict\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    251\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    252\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Initialize with a file path.\u001b[39;00m\n\u001b[1;32m    253\u001b[0m \n\u001b[1;32m    254\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;124;03m        `aload` methods to retrieve parsed documents with content and metadata.\u001b[39;00m\n\u001b[1;32m    280\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 281\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheaders\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheaders\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    282\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparser \u001b[38;5;241m=\u001b[39m PyPDFParser(\n\u001b[1;32m    283\u001b[0m         password\u001b[38;5;241m=\u001b[39mpassword,\n\u001b[1;32m    284\u001b[0m         mode\u001b[38;5;241m=\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    290\u001b[0m         extraction_kwargs\u001b[38;5;241m=\u001b[39mextraction_kwargs,\n\u001b[1;32m    291\u001b[0m     )\n",
-      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/pdf.py:140\u001b[0m, in \u001b[0;36mBasePDFLoader.__init__\u001b[0;34m(self, file_path, headers)\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(temp_pdf)\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path):\n\u001b[0;32m--> 140\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile path \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m is not a valid file or url\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path)\n",
-      "\u001b[0;31mValueError\u001b[0m: File path /Users/itsyuimoriispace/Desktop/Digital Transformation.pdf is not a valid file or url"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/parsers/pdf.py:359\u001b[0m, in \u001b[0;36mPyPDFParser.lazy_parse\u001b[0;34m(self, blob)\u001b[0m\n\u001b[1;32m    358\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 359\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpypdf\u001b[39;00m\n\u001b[1;32m    360\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pypdf'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[64], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Load and parse the PDF\u001b[39;00m\n\u001b[1;32m     17\u001b[0m loader \u001b[38;5;241m=\u001b[39m PyPDFLoader(file_path)\n\u001b[0;32m---> 18\u001b[0m pages \u001b[38;5;241m=\u001b[39m \u001b[43mloader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_and_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Print the number of pages found\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoaded \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(pages)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m pages from the PDF\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_core/document_loaders/base.py:66\u001b[0m, in \u001b[0;36mBaseLoader.load_and_split\u001b[0;34m(self, text_splitter)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     65\u001b[0m     _text_splitter \u001b[38;5;241m=\u001b[39m text_splitter\n\u001b[0;32m---> 66\u001b[0m docs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _text_splitter\u001b[38;5;241m.\u001b[39msplit_documents(docs)\n",
+      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_core/document_loaders/base.py:32\u001b[0m, in \u001b[0;36mBaseLoader.load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m[Document]:\n\u001b[1;32m     31\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Load data into Document objects.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlazy_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/pdf.py:307\u001b[0m, in \u001b[0;36mPyPDFLoader.lazy_load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    306\u001b[0m     blob \u001b[38;5;241m=\u001b[39m Blob\u001b[38;5;241m.\u001b[39mfrom_path(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path)  \u001b[38;5;66;03m# type: ignore[attr-defined]\u001b[39;00m\n\u001b[0;32m--> 307\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparser\u001b[38;5;241m.\u001b[39mlazy_parse(blob)\n",
+      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/parsers/pdf.py:361\u001b[0m, in \u001b[0;36mPyPDFParser.lazy_parse\u001b[0;34m(self, blob)\u001b[0m\n\u001b[1;32m    359\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpypdf\u001b[39;00m\n\u001b[1;32m    360\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[0;32m--> 361\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[1;32m    362\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`pypdf` package not found, please install it with `pip install pypdf`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    363\u001b[0m     )\n\u001b[1;32m    365\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_extract_text_from_page\u001b[39m(page: pypdf\u001b[38;5;241m.\u001b[39mPageObject) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m    366\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    367\u001b[0m \u001b[38;5;124;03m    Extract text from image given the version of pypdf.\u001b[39;00m\n\u001b[1;32m    368\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    373\u001b[0m \u001b[38;5;124;03m        str: The extracted text.\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: `pypdf` package not found, please install it with `pip install pypdf`"
      ]
     }
    ],
    "source": [
     " \n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "from dotenv import load_dotenv\n",
+    "# from langchain_community.document_loaders import PyPDFLoader\n",
+    "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "# from dotenv import load_dotenv\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('/opt/homebrew/lib/python3.10/site-packages')\n",
+    "# import sys\n",
+    "# sys.path.append('/opt/homebrew/lib/python3.10/site-packages')\n",
     "\n",
-    "# Now your imports should work\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "# Load environment variables (including your Google API key)\n",
-    "load_dotenv()\n",
+    "# # Now your imports should work\n",
+    "# from langchain_community.document_loaders import PyPDFLoader\n",
+    "# # Load environment variables (including your Google API key)\n",
+    "# load_dotenv()\n",
     "\n",
-    "# Set the path to your PDF file\n",
-    "file_path = \"/Users/itsyuimoriispace/Desktop/Digital Transformation.pdf\"\n",
+    "# # Set the path to your PDF file\n",
+    "# file_path = \"/Users/itsyuimorii/Downloads/Digital Transformation.pdf\"\n",
     "\n",
-    "# Load and parse the PDF\n",
-    "loader = PyPDFLoader(file_path)\n",
-    "pages = loader.load_and_split()\n",
+    "# # Load and parse the PDF\n",
+    "# loader = PyPDFLoader(file_path)\n",
+    "# pages = loader.load_and_split()\n",
     "\n",
-    "# Print the number of pages found\n",
-    "print(f\"Loaded {len(pages)} pages from the PDF\")\n",
+    "# # Print the number of pages found\n",
+    "# print(f\"Loaded {len(pages)} pages from the PDF\")\n",
     "\n",
-    "# Initialize the Gemini model\n",
-    "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-2.0-flash-001\",\n",
-    "    temperature=0,\n",
-    "    max_tokens=None\n",
-    ")\n",
+    "# # Initialize the Gemini model\n",
+    "# llm = ChatGoogleGenerativeAI(\n",
+    "#     model=\"gemini-2.0-flash-001\",\n",
+    "#     temperature=0,\n",
+    "#     max_tokens=None\n",
+    "# )\n",
     "\n",
-    "# If you want to analyze specific content from the PDF\n",
-    "if len(pages) > 0:\n",
-    "    # Example: Summarize the first page\n",
-    "    question = f\"Summarize the following content from a PDF about Digital Transformation: {pages[0].page_content[:1000]}\"\n",
-    "    response = llm.invoke(question)\n",
-    "    print(\"\\nSummary of first page:\")\n",
-    "    print(response)"
+    "# # If you want to analyze specific content from the PDF\n",
+    "# if len(pages) > 0:\n",
+    "#     # Example: Summarize the first page\n",
+    "#     question = f\"Summarize the following content from a PDF about Digital Transformation: {pages[0].page_content[:1000]}\"\n",
+    "#     response = llm.invoke(question)\n",
+    "#     print(\"\\nSummary of first page:\")\n",
+    "#     print(response)"
    ]
   },
   {
@@ -439,6 +445,23 @@
     "        return text.strip().split(\",\")\n",
     "    \n",
     "CommaSeperatedListOutputParser().parse(\"Hello, how are you?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e70094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import AIMessagePromptTemplate\n",
+    "from langchain.prompts import SystemMessagePromptTemplate\n",
+    "from langchain.prompts import HumanMessagePromptTemplate\n",
+    "from langchain.prompts import ChatMessagePromptTemplate\n",
+    "\n",
+    "prompt = \"Dif-tor heh smusma-Live long and prosper {subject}\"\n",
+    "\n",
+    "chat_message_prompt = AIMessagePromptTemplate.from_template(template=prompt)"
    ]
   },
   {
@@ -667,16 +690,6 @@
     "    content=\"You are a naming guru, your name is Meimeishi\",\n",
     "    additional_kwargs={\"Tatsujin_Name\": \"Meimeishi\"}\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea60a437",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "类方法，允许你从一个字符串模板创建"
    ]
   },
   {
