--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "36cce7e0",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "3b8fa0df",
    "metadata": {},
    "outputs": [
@@ -479,52 +479,52 @@
     }
    ],
    "source": [
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain.schema import BaseOutputParser\n",
+    "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "# from langchain.prompts import PromptTemplate\n",
+    "# from langchain_community.document_loaders import PyPDFLoader\n",
+    "# import os\n",
+    "# from dotenv import load_dotenv\n",
+    "# from langchain.schema import BaseOutputParser\n",
     "\n",
-    "class CommaSeperatedListOutputParser(BaseOutputParser):\n",
-    "    \"\"\"Parse the output of an LLM call to a comma-separated list.\"\"\"\n",
+    "# class CommaSeperatedListOutputParser(BaseOutputParser):\n",
+    "#     \"\"\"Parse the output of an LLM call to a comma-separated list.\"\"\"\n",
     "\n",
-    "    def parse(self, text: str) -> list[str]:\n",
-    "        \"\"\"Parse the output of an LLM call.\"\"\"\n",
-    "        return text.strip().split(\",\")\n",
+    "#     def parse(self, text: str) -> list[str]:\n",
+    "#         \"\"\"Parse the output of an LLM call.\"\"\"\n",
+    "#         return text.strip().split(\",\")\n",
     "    \n",
-    "load_dotenv()\n",
-    "api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "# load_dotenv()\n",
+    "# api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
     "\n",
-    "# Set the path to your PDF file\n",
-    "file_path = \"/Users/itsyuimoriispace/Desktop/Digital Transformation.pdf\"\n",
+    "# # Set the path to your PDF file\n",
+    "# file_path = \"/Users/itsyuimoriispace/Desktop/Digital Transformation.pdf\"\n",
     "\n",
-    "# Load and parse the PDF\n",
-    "loader = PyPDFLoader(file_path)\n",
-    "pages = loader.load_and_split()\n",
+    "# # Load and parse the PDF\n",
+    "# loader = PyPDFLoader(file_path)\n",
+    "# pages = loader.load_and_split()\n",
     "\n",
-    "llm = ChatGoogleGenerativeAI(\n",
-    "    model=\"gemini-2.0-flash-001\",\n",
-    "    temperature=0,\n",
-    "    max_tokens=None,\n",
-    "    timeout=None,\n",
-    "    max_retries=2\n",
-    ")\n",
+    "# llm = ChatGoogleGenerativeAI(\n",
+    "#     model=\"gemini-2.0-flash-001\",\n",
+    "#     temperature=0,\n",
+    "#     max_tokens=None,\n",
+    "#     timeout=None,\n",
+    "#     max_retries=2\n",
+    "# )\n",
     "\n",
-    "if len(pages) > 0:\n",
-    "      # Request comma-separated list of key points\n",
-    "    question = f\"Read the following content from a PDF about Digital Transformation and provide 5 key points as a comma-separated list (just the points, no numbering or explanation): {pages[0].page_content[:1000]}\"\n",
+    "# if len(pages) > 0:\n",
+    "#       # Request comma-separated list of key points\n",
+    "#     question = f\"Read the following content from a PDF about Digital Transformation and provide 5 key points as a comma-separated list (just the points, no numbering or explanation): {pages[0].page_content[:1000]}\"\n",
     "    \n",
-    "    # Use the predict method to get a direct string return\n",
-    "    response_text = llm.predict(question)\n",
-    "    print(\"\\nKey points from first page:\")\n",
-    "    print(response_text)\n",
+    "#     # Use the predict method to get a direct string return\n",
+    "#     response_text = llm.predict(question)\n",
+    "#     print(\"\\nKey points from first page:\")\n",
+    "#     print(response_text)\n",
     "\n",
-    "    # Now parsing comma-delimited lists\n",
-    "    key_points = CommaSeperatedListOutputParser().parse(response_text)\n",
-    "    print(\"\\nParsed key points:\")\n",
-    "    for i, point in enumerate(key_points, 1):\n",
-    "        print(f\"{i}. {point.strip()}\")"
+    "#     # Now parsing comma-delimited lists\n",
+    "#     key_points = CommaSeperatedListOutputParser().parse(response_text)\n",
+    "#     print(\"\\nParsed key points:\")\n",
+    "#     for i, point in enumerate(key_points, 1):\n",
+    "#         print(f\"{i}. {point.strip()}\")"
    ]
   },
   {
@@ -816,22 +816,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "458b11f0",
+   "cell_type": "markdown",
+   "id": "3b59bcc6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "# Using f-string to format the prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "38f91ee9",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ntell me a japanese traditional tale story \\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "fstring_template = \"\"\"\n",
+    "tell me a japanese traditional tale story \n",
+    "\"\"\"\n",
+    "prompt = PromptTemplate.from_template(fstring_template)\n",
+    "prompt.format(name=\"Mori\", what=\"happy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1bc6c3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mLoading .env environment variables...\u001b[0m\n",
+      "To activate this project's virtualenv, run \u001b[33mpipenv shell\u001b[0m.\n",
+      "Alternatively, run a command inside the virtualenv with \u001b[33mpipenv run\u001b[0m.\n",
+      "\u001b[1;32mInstalling jinja2...\u001b[0m\n",
+      "✔ Installation Succeeded\n",
+      "To activate this project's virtualenv, run \u001b[33mpipenv shell\u001b[0m.\n",
+      "Alternatively, run a command inside the virtualenv with \u001b[33mpipenv run\u001b[0m.\n",
+      "\u001b[1mInstalling dependencies from Pipfile.lock \u001b[0m\u001b[1;39m(af0768)...\u001b[0m\n",
+      "\u001b[32mAll dependencies are now up-to-date!\u001b[0m\n",
+      "\u001b[1;32mUpgrading\u001b[0m jinja2 in \u001b[39m dependencies.\u001b[0m\n",
+      "\u001b[?25lBuilding requirements...\n",
+      "\u001b[2KResolving dependencies....\n",
+      "\u001b[2K✔ Success! Locking packages...\n",
+      "\u001b[2K\u001b[32m⠋\u001b[0m Locking packages...\n",
+      "\u001b[1A\u001b[2K\u001b[?25lBuilding requirements...\n",
+      "\u001b[2KResolving dependencies....\n",
+      "\u001b[2K✔ Success! Locking packages...\n",
+      "\u001b[2K\u001b[32m⠏\u001b[0m Locking packages...\n",
+      "\u001b[1A\u001b[2KTo activate this project's virtualenv, run \u001b[33mpipenv shell\u001b[0m.\n",
+      "Alternatively, run a command inside the virtualenv with \u001b[33mpipenv run\u001b[0m.\n",
+      "\u001b[1mInstalling dependencies from Pipfile.lock \u001b[0m\u001b[1;39m(5355e5)...\u001b[0m\n",
+      "\u001b[32mAll dependencies are now up-to-date!\u001b[0m\n",
+      "\u001b[1mInstalling dependencies from Pipfile.lock \u001b[0m\u001b[1;39m(5355e5)...\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pipenv install jinja2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b26f8c5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# # Create a Jinja2 template string\n",
+    "# jinja2_template = \"telling me a story about {{name}} {{content}} story\"\n",
+    "\n",
+    "# # Create a LangChain PromptTemplate with Jinja2 format\n",
+    "# prompt = PromptTemplate.from_template(jinja2_template, template_format=\"jinja2\")\n",
+    "\n",
+    "# # Format the prompt with specific values\n",
+    "# formatted_prompt = prompt.format(name=\"Mori\", content=\"tale\")\n",
+    "\n",
+    "# # Print the resulting prompt\n",
+    "# print(formatted_prompt)"
+   ]
   }
  ],
  "metadata": {
